[package]
name = "kaput-cli"
version = "2.4.0"
edition = "2021"
authors = ["David Chalifoux <mail@chalifoux.dev>"]
license = "MIT"
description = "The unofficial CLI for Put.io"
readme = "README.md"
homepage = "https://github.com/davidchalifoux/kaput-cli"
repository = "https://github.com/davidchalifoux/kaput-cli"
keywords = ["cli", "putio", "kaput", "upload", "download"]
categories = ["command-line-utilities"]
exclude = [".gitignore", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
confy = "0.6.1"
serde = { version = "1.0.204", features = ["derive"] }
reqwest = { version = "0.12.5", features = [
    "json",
    "blocking",
    "multipart",
    "native-tls-vendored",
] }
tabled = { version = "0.15.0", features = ["derive"] }
bytefmt = "0.1.7"
serde_json = { version = "1.0.120", features = ["std"] }
serde_with = { version = "3.9.0", features = [] }

[[bin]]
name = "kaput"
path = "src/main.rs"
